<resources>
    <string name="app_name" translatable="false">Keyboard Switcher</string>

    <string name="app_warning_key" translatable="false">app_warning_key</string>
    <string name="app_warning"> This application makes it easy to switch keyboard if you do not have an effective way integrated into the operating system and the keyboard of your device.\n\nIn Lollipop and later versions of Android, a long press on the space bar of your keyboard can make it easy to change. System-managed notifications also allow this change.\n\nIn these cases, the application may be superfluous.</string>

    <string name="hint_text_test">test area</string>

    <string name="notification_keyboard_title">Switch the keyboard</string>
    <string name="notification_keyboard_content_text">Tap to select the default keyboard.</string>

    <string name="notification_floating_button_title">Keyboard button</string>
    <string name="notification_floating_button_content_text">Keyboard floating button service activated.</string>

    <string name="general">General</string>

    <string name="settings_ime_available_key" translatable="false">settings_ime_available_key</string>
    <string name="settings_ime_available_title">Available keyboards</string>

    <string name="settings_ime_change_key" translatable="false">settings_ime_choose_key</string>
    <string name="settings_ime_change_title">Change the default keyboard</string>

    <string name="error_unavailable_keyboard_feature">Your system is not able to open the keyboard selection dialog.</string>

    <string name="startup">Startup</string>

    <string name="settings_launch_startup_key" translatable="false">settings_launch_startup</string>
    <string name="settings_launch_startup_title">Launch at startup</string>

    <string name="notification">Notification</string>

    <string name="settings_notification_key" translatable="false">settings_notification_key</string>
    <string name="settings_notification_title">Enable notification</string>
    <string name="settings_notification_description">Enable a notification to choose a keyboard</string>

    <string name="floating_button">Floating keyboard button</string>

    <string name="settings_floating_button_key" translatable="false">settings_floating_button_key</string>
    <string name="settings_floating_button_title">Enable floating button</string>
    <string name="settings_floating_button_description">Enable a floating button to choose a keyboard</string>

    <string name="error_overlay_permission_request">Your system is not able to open the overlay permission request dialog.</string>

    <string name="floating_button_warning">This feature may be unstable in last versions of Android (Lollipop and following).</string>
    <string name="floating_button_notification_warning">The display of an additional notification is essential to keep the button visible in your version of Android (O and following).</string>
    <string name="floating_button_above_screen">You must accept the permissions to permit the floating button to be drawing over other apps.</string>

    <string name="settings_floating_button_position_key" translatable="false">settings_floating_button_position_key</string>
    <string name="settings_floating_button_position_title">Button position</string>

    <string name="settings_floating_button_lock_key" translatable="false">settings_floating_button_lock_key</string>
    <string name="settings_floating_button_lock_title">Lock position</string>

    <string name="settings_colors_key" translatable="false">settings_colors_key</string>
    <string name="settings_colors_title">Button color</string>
    <string name="settings_colors_description" translatable="false">[color]</string>

    <string name="about_title">About</string>
    <string name="information">Information</string>
    <string name="powered_by">Powered by</string>
    <string name="source_code">Source code:</string>
    <string name="contribution">Contribution:</string>
    <string name="about_version">Version:</string>
    <string name="contact_title">Contact</string>
    <string name="developer">Developer</string>
    <string name="html_text_purpose">This app is designed to &lt;strong&gt;easily change keyboard&lt;/strong&gt;.</string>
    <string name="html_text_free">%1$s is &lt;strong&gt;free&lt;/strong&gt;, &lt;strong&gt;libre&lt;/strong&gt; and &lt;strong&gt;without advertising&lt;/strong&gt;. It is provided as is, under &lt;strong&gt;GPLv3&lt;/strong&gt; license, without any warranty.</string>
    <string name="html_text_contribution">In order to &lt;strong&gt;keep our freedom&lt;/strong&gt;, &lt;strong&gt;fix bugs&lt;/strong&gt;, &lt;strong&gt;add features&lt;/strong&gt; and &lt;strong&gt;to be always active&lt;/strong&gt;, we count on your &lt;strong&gt;contribution.&lt;/strong&gt;</string>

</resources>
